Cafeteria nearing completion
New walls, tables more aligned, new stuff, fixed lighting

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,18 +81,17 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Sounds/Music
+ContentBrowserTab1.SelectedPaths=/Game/Textures/Materials
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
-WindowSize=X=1566.000 Y=894.000
+WindowSize=X=1576.000 Y=904.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -587,8 +586,8 @@ BlueprintNativeCodeGen.TimeStamp=2017.01.14-16.42.37
 BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/Grand_Cafeteria
+MRUItem0=/Game/Maps/Grand_Cafeteria
+MRUItem1=/Game/Maps/Main
 MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1604,6 +1603,9 @@ FbxImportUI.Miscellaneous=True
 SkeletalMesh.SkeletalMesh=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
@@ -1621,12 +1623,9 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1698,6 +1697,7 @@ LastLogListing=FBXImport
 /Game/Meshs/food/carrot_Cylinder01_Skeleton.carrot_Cylinder01_Skeleton=1
 /Game/Meshs/food/carrot.carrot_Cylinder01=1
 /Game/Meshs/food/broccoli.broccoli=0
+/Game/Meshs/modern_staircase.modern_staircase=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1801,17 +1801,17 @@ FoodFightersPlayerStart_C.Actor=True
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-Object="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
 FoodFightersChar_C=
 Character=
 Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
-SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
 FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
@@ -1833,13 +1833,13 @@ K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
 K2Node=
 EdGraphNode=
-StaticMesh=
-StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags
+StaticMesh="Object.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]" 
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 StandardAmmoPickup_C=Object.Actor.Tags
-StaticMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+StaticMeshComponent=
 CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 FireAmmoPickup_C=Object.Actor.Tags
 IceAmmoPickup_C=Object.Actor.Tags
