minor tweaks to text in main menu and pause menu. fixed ammo spawner so that it works in standalone now.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,6 +40,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
 NewWindowPosition=(X=315,Y=163)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -87,7 +88,16 @@ ContentBrowserTab1.SelectedPaths=/Game/Textures/Materials
 LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/Sounds/SoundEffects/flesh_strider_impact_bullet3.flesh_strider_impact_bullet3
+OpenAssetsAtExit=/Game/Sounds/SoundEffects/flesh_strider_impact_bullet2.flesh_strider_impact_bullet2
+OpenAssetsAtExit=/Game/Sounds/SoundEffects/flesh_strider_impact_bullet1.flesh_strider_impact_bullet1
+OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
+OpenAssetsAtExit=/Game/Sounds/Music/Bensound_-_Elevator_Bossa_Nova.Bensound_-_Elevator_Bossa_Nova
+OpenAssetsAtExit=/Game/UI/StartBuffer.StartBuffer
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1625,7 +1635,7 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=EditorErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1819,7 +1829,7 @@ MainMenu_C=
 UserWidget=
 Widget=
 Visual=
-Button=Object.Appearance.WidgetStyle
+Button="Object.Appearance.WidgetStyle" 
 ContentWidget=
 PanelWidget=
 ProjectileMovementComponent=
@@ -1833,7 +1843,7 @@ K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
 K2Node=
 EdGraphNode=
-StaticMesh="Object.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]" 
+StaticMesh=Object.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
