--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/Maps/Grand_Cafeteria.Grand_Cafeteria
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/FoodFightersGI.FoodFightersGI_C
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/Maps/Main.Main
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Blueprints/FoodFightersGM.FoodFightersGM_C
 GlobalDefaultServerGameMode=None
