added FoodFightersPlayerStart to Grand_Cafeteria in order to play test. please keep at least 4 of these in the map at all times

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -85,7 +85,7 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/Textures/Materials
 
 [EditorStartup]
-LastLevel=/Game/Maps/Grand_Cafeteria
+LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -596,8 +596,8 @@ BlueprintNativeCodeGen.TimeStamp=2017.01.14-16.42.37
 BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Grand_Cafeteria
-MRUItem1=/Game/Maps/Main
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/Maps/Grand_Cafeteria
 MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1611,13 +1611,14 @@ REINST_FoodFightersChar_C_225.Input=True
 REINST_FoodFightersChar_C_225.Actor=True
 FbxImportUI.Miscellaneous=True
 SkeletalMesh.SkeletalMesh=True
+FoodFightersPlayerStart_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Meshs/food/donut.donut;
