--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,13 +82,13 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Textures/Materials
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/Sounds/SoundEffects/flesh_strider_impact_bullet3.flesh_strider_impact_bullet3
 OpenAssetsAtExit=/Game/Sounds/SoundEffects/flesh_strider_impact_bullet2.flesh_strider_impact_bullet2
@@ -101,7 +101,7 @@ OpenAssetsAtExit=/Game/UI/StartBuffer.StartBuffer
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
-WindowSize=X=1576.000 Y=904.000
+WindowSize=X=1586.000 Y=914.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -596,8 +596,8 @@ BlueprintNativeCodeGen.TimeStamp=2017.01.14-16.42.37
 BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/Grand_Cafeteria
+MRUItem0=/Game/Maps/Grand_Cafeteria
+MRUItem1=/Game/Maps/Main
 MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1614,6 +1614,14 @@ SkeletalMesh.SkeletalMesh=True
 FoodFightersPlayerStart_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
+RecentlyPlaced=/Game/Meshs/Taps/sink_notseperated.sink_notseperated;
+RecentlyPlaced=/Game/Meshs/Taps/sink_seperated.sink_seperated;
+RecentlyPlaced=/Game/Meshs/bathroom_sink_free01_OBJ/bathroom_sink_free01.bathroom_sink_free01;
 RecentlyPlaced=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
@@ -1626,17 +1634,9 @@ RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_Base_Color.Apple_Base_Color;
 RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat;
 RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00;
 RecentlyPlaced=/Game/Meshs/food/Pumpkin_Mat.Pumpkin_Mat;
-RecentlyPlaced=/Game/Meshs/food/Pumpkin.Pumpkin;
-RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
-RecentlyPlaced=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup;
-RecentlyPlaced=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1709,6 +1709,7 @@ LastLogListing=EditorErrors
 /Game/Meshs/food/carrot.carrot_Cylinder01=1
 /Game/Meshs/food/broccoli.broccoli=0
 /Game/Meshs/modern_staircase.modern_staircase=1
+/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1830,7 +1831,7 @@ MainMenu_C=
 UserWidget=
 Widget=
 Visual=
-Button="Object.Appearance.WidgetStyle" 
+Button=Object.Appearance.WidgetStyle
 ContentWidget=
 PanelWidget=
 ProjectileMovementComponent=
@@ -1844,7 +1845,7 @@ K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
 K2Node=
 EdGraphNode=
-StaticMesh=Object.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]
+StaticMesh=
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
@@ -1859,6 +1860,7 @@ PauseMenu_C=
 EndGameScreen_C=
 FoodFightersGM_C=
 GameMode=
+Blueprint_CeilingLight_C=Object.Light.Color
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
