Staircase collision fixed
pipes added and staircase collision has been modified

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Meshs
 
 [EditorStartup]
 LastLevel=/Game/Maps/Grand_Cafeteria
@@ -100,9 +100,9 @@ OpenAssetsAtExit=/Game/Sounds/Music/Bensound_-_Elevator_Bossa_Nova.Bensound_-_El
 OpenAssetsAtExit=/Game/UI/StartBuffer.StartBuffer
 
 [RootWindow]
-ScreenPosition=X=277.000 Y=73.000
-WindowSize=X=1586.000 Y=914.000
-InitiallyMaximized=True
+ScreenPosition=X=198.000 Y=60.000
+WindowSize=X=1596.000 Y=924.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1040,7 +1040,7 @@ StaticMesh.LOD0=True
 StaticMesh.LodSettings=True
 StaticMesh.StaticMesh=True
 StaticMesh.ImportSettings=True
-StaticMesh.Transform=False
+StaticMesh.Transform=True
 StaticMesh.Thumbnail=True
 StaticMesh.Collision=True
 StaticMesh.Navigation=True
@@ -1612,8 +1612,26 @@ REINST_FoodFightersChar_C_225.Actor=True
 FbxImportUI.Miscellaneous=True
 SkeletalMesh.SkeletalMesh=True
 FoodFightersPlayerStart_C.TransformCommon=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Logging=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.Preview=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Particles/Materials/M_radial_ramp.M_radial_ramp;
+RecentlyPlaced=/Game/Meshs/defaultMat.defaultMat;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Brushed_Nickel.M_Metal_Brushed_Nickel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Copper.M_Metal_Copper;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Sphere.Shape_Sphere;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Tube.Shape_Tube;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Pipe.Shape_Pipe;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Trim_90_In.Shape_Trim_90_In;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
@@ -1623,17 +1641,6 @@ RecentlyPlaced=/Game/Meshs/Taps/sink_notseperated.sink_notseperated;
 RecentlyPlaced=/Game/Meshs/Taps/sink_seperated.sink_seperated;
 RecentlyPlaced=/Game/Meshs/bathroom_sink_free01_OBJ/bathroom_sink_free01.bathroom_sink_free01;
 RecentlyPlaced=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/Meshs/food/donut.donut;
-RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_Base_Color.Apple_Base_Color;
-RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat;
-RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00;
-RecentlyPlaced=/Game/Meshs/food/Pumpkin_Mat.Pumpkin_Mat;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1716,6 +1723,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.StaticMesh.Collision,
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1845,7 +1853,7 @@ K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
 K2Node=
 EdGraphNode=
-StaticMesh=
+StaticMesh="Object.BodySetup.Object.AggGeom" "Object.BodySetup.Object.DefaultInstance" "Object.BodySetup.Object.WalkableSlopeOverride" "Object.AssetImportData.Object.VertexOverrideColor" "Object.AssetImportData.Object.ImportRotation" "Object.NavCollision.Object.BoxCollision" "Object.NavCollision.Object.BoxCollision.BoxCollision[0]" 
 StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
