made tweaks to ammo, HUD, jumpheight, proj spawn offset, pickup size, ammo spawwn rate, and spawn location based off player feedback

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,20 +82,24 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
+OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
+OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
+OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart
 
 [RootWindow]
-ScreenPosition=X=277.000 Y=73.000
-WindowSize=X=1586.000 Y=914.000
+ScreenPosition=X=220.000 Y=64.000
+WindowSize=X=1596.000 Y=924.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -112,11 +116,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Sounds/Music/Pit People OST Music - It's Us! (Main Theme) by Patric Catani.wav
+GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/splatBG.png
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -590,8 +594,8 @@ BlueprintNativeCodeGen.TimeStamp=2017.01.14-16.42.37
 BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/Grand_Cafeteria
+MRUItem0=/Game/Maps/Grand_Cafeteria
+MRUItem1=/Game/Maps/Main
 MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1606,6 +1610,64 @@ REINST_FoodFightersChar_C_225.Actor=True
 FbxImportUI.Miscellaneous=True
 SkeletalMesh.SkeletalMesh=True
 FoodFightersPlayerStart_C.TransformCommon=True
+PanelWidget.Layout=True
+Widget.Layout=True
+REINST_FoodFightersChar_C_222.None=True
+REINST_FoodFightersChar_C_222.Tick=True
+REINST_FoodFightersChar_C_222.Character=True
+REINST_FoodFightersChar_C_222.Camera=True
+REINST_FoodFightersChar_C_222.Pawn=True
+REINST_FoodFightersChar_C_222.Rendering=True
+REINST_FoodFightersChar_C_222.Replication=True
+REINST_FoodFightersChar_C_222.Input=True
+REINST_FoodFightersChar_C_222.Actor=True
+REINST_FoodFightersChar_C_270.None=True
+REINST_FoodFightersChar_C_270.Tick=True
+REINST_FoodFightersChar_C_270.Character=True
+REINST_FoodFightersChar_C_270.Camera=True
+REINST_FoodFightersChar_C_270.Pawn=True
+REINST_FoodFightersChar_C_270.Rendering=True
+REINST_FoodFightersChar_C_270.Replication=True
+REINST_FoodFightersChar_C_270.Input=True
+REINST_FoodFightersChar_C_270.Actor=True
+REINST_FoodFightersChar_C_434.Variable=True
+REINST_FoodFightersChar_C_434.Sockets=True
+REINST_FoodFightersChar_C_434.Character Movement (General Settings)=True
+REINST_FoodFightersChar_C_434.Character Movement: Walking=True
+REINST_FoodFightersChar_C_434.Character Movement: Jumping / Falling=True
+REINST_FoodFightersChar_C_434.Character Movement: Swimming=True
+REINST_FoodFightersChar_C_434.Character Movement: Flying=True
+REINST_FoodFightersChar_C_434.Character Movement: Custom Movement=True
+REINST_FoodFightersChar_C_434.Character Movement: Physics Interaction=True
+REINST_FoodFightersChar_C_434.Character Movement (Networking)=True
+REINST_FoodFightersChar_C_434.Character Movement=True
+REINST_FoodFightersChar_C_434.Character Movement: Avoidance=True
+REINST_FoodFightersChar_C_434.Character Movement: NavMesh Movement=True
+REINST_FoodFightersChar_C_434.NavMovement=True
+REINST_FoodFightersChar_C_434.Velocity=True
+REINST_FoodFightersChar_C_434.PlanarMovement=True
+REINST_FoodFightersChar_C_434.MovementComponent=True
+REINST_FoodFightersChar_C_434.Tags=True
+REINST_FoodFightersChar_C_434.Activation=True
+REINST_FoodFightersChar_C_449.Variable=True
+REINST_FoodFightersChar_C_449.Sockets=True
+REINST_FoodFightersChar_C_449.Character Movement (General Settings)=True
+REINST_FoodFightersChar_C_449.Character Movement: Walking=True
+REINST_FoodFightersChar_C_449.Character Movement: Jumping / Falling=True
+REINST_FoodFightersChar_C_449.Character Movement: Swimming=True
+REINST_FoodFightersChar_C_449.Character Movement: Flying=True
+REINST_FoodFightersChar_C_449.Character Movement: Custom Movement=True
+REINST_FoodFightersChar_C_449.Character Movement: Physics Interaction=True
+REINST_FoodFightersChar_C_449.Character Movement (Networking)=True
+REINST_FoodFightersChar_C_449.Character Movement=True
+REINST_FoodFightersChar_C_449.Character Movement: Avoidance=True
+REINST_FoodFightersChar_C_449.Character Movement: NavMesh Movement=True
+REINST_FoodFightersChar_C_449.NavMovement=True
+REINST_FoodFightersChar_C_449.Velocity=True
+REINST_FoodFightersChar_C_449.PlanarMovement=True
+REINST_FoodFightersChar_C_449.MovementComponent=True
+REINST_FoodFightersChar_C_449.Tags=True
+REINST_FoodFightersChar_C_449.Activation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
@@ -1687,7 +1749,7 @@ LastLogListing=FBXImport
 /Game/Sounds/SoundEffects/normal-hitnormal.normal-hitnormal=1
 /Game/UI/EndGameScreen.EndGameScreen=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
-/Game/Blueprints/FoodFightersGI.FoodFightersGI=1
+/Game/Blueprints/FoodFightersGI.FoodFightersGI=0
 /Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat=1
 /Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00=1
 /Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight=1
@@ -1806,7 +1868,7 @@ FoodFightersPlayerStart_C.Actor=True
 [DetailPropertyExpansion]
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -1832,8 +1894,8 @@ ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
 Border=
-EditableTextBox=Object.Style.WidgetStyle
-ProgressBar=Object.Style.WidgetStyle
+EditableTextBox="Object.Style.WidgetStyle" 
+ProgressBar="Object.Style.WidgetStyle" 
 Image="Object.Appearance.Brush" 
 K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
@@ -1844,11 +1906,11 @@ StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.Componen
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-StandardAmmoPickup_C="Object.Actor.Tags" 
+StandardAmmoPickup_C=Object.Actor.Tags
 StaticMeshComponent=
-CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-FireAmmoPickup_C="Object.Actor.Tags" 
-IceAmmoPickup_C="Object.Actor.Tags" 
+CapsuleComponent=
+FireAmmoPickup_C=Object.Actor.Tags
+IceAmmoPickup_C=Object.Actor.Tags
 Font=Object.Font
 PauseMenu_C=
 EndGameScreen_C=
@@ -1940,5 +2002,8 @@ bShowMobileStats=False
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499983 R=0.000000
 PrimType=1
+
+[ColorThemes]
+Theme0=FlashingRed
 
 
