Made some tweaks to staircase, vending machine, balcony and a lamp in Grand_cafeteria. Fixed fire and ice projectiles so they bounce on anything that isnt the floor now.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,13 +89,9 @@ LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
-OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
-OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
-OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart
+OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
+OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
+OpenAssetsAtExit=/Game/Blueprints/IceProjectile.IceProjectile
 
 [RootWindow]
 ScreenPosition=X=220.000 Y=64.000
@@ -1770,7 +1766,7 @@ LastLogListing=FBXImport
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
-SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
@@ -1869,19 +1865,19 @@ FoodFightersPlayerStart_C.Actor=True
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+Object="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 FoodFightersChar_C=
 Character=
 Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
-SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
-SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
-MeshComponent=
+SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C=Object.Actor.Tags
+FireProjectile_C="Object.Actor.Tags" 
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
@@ -1894,15 +1890,15 @@ ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
 Border=
-EditableTextBox="Object.Style.WidgetStyle" 
-ProgressBar="Object.Style.WidgetStyle" 
-Image="Object.Appearance.Brush" 
+EditableTextBox=Object.Style.WidgetStyle
+ProgressBar=Object.Style.WidgetStyle
+Image=Object.Appearance.Brush
 K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
 K2Node=
 EdGraphNode=
 StaticMesh=
-StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" "Object.Actor.Tags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
@@ -1916,7 +1912,7 @@ PauseMenu_C=
 EndGameScreen_C=
 FoodFightersGM_C=
 GameMode=
-Blueprint_CeilingLight_C=Object.Light.Color
+Blueprint_CeilingLight_C="Object.Light.Color" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
