--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,7 +40,6 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
 NewWindowPosition=(X=315,Y=163)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -92,6 +91,14 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
 OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
 OpenAssetsAtExit=/Game/Blueprints/IceProjectile.IceProjectile
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
+OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
+OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
+OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
+OpenAssetsAtExit=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup
+OpenAssetsAtExit=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup
+OpenAssetsAtExit=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup
 
 [RootWindow]
 ScreenPosition=X=220.000 Y=64.000
@@ -1664,6 +1671,25 @@ REINST_FoodFightersChar_C_449.PlanarMovement=True
 REINST_FoodFightersChar_C_449.MovementComponent=True
 REINST_FoodFightersChar_C_449.Tags=True
 REINST_FoodFightersChar_C_449.Activation=True
+REINST_FoodFightersChar_C_122.Variable=True
+REINST_FoodFightersChar_C_122.Sockets=True
+REINST_FoodFightersChar_C_122.Character Movement (General Settings)=True
+REINST_FoodFightersChar_C_122.Character Movement: Walking=True
+REINST_FoodFightersChar_C_122.Character Movement: Jumping / Falling=True
+REINST_FoodFightersChar_C_122.Character Movement: Swimming=True
+REINST_FoodFightersChar_C_122.Character Movement: Flying=True
+REINST_FoodFightersChar_C_122.Character Movement: Custom Movement=True
+REINST_FoodFightersChar_C_122.Character Movement: Physics Interaction=True
+REINST_FoodFightersChar_C_122.Character Movement (Networking)=True
+REINST_FoodFightersChar_C_122.Character Movement=True
+REINST_FoodFightersChar_C_122.Character Movement: Avoidance=True
+REINST_FoodFightersChar_C_122.Character Movement: NavMesh Movement=True
+REINST_FoodFightersChar_C_122.NavMovement=True
+REINST_FoodFightersChar_C_122.Velocity=True
+REINST_FoodFightersChar_C_122.PlanarMovement=True
+REINST_FoodFightersChar_C_122.MovementComponent=True
+REINST_FoodFightersChar_C_122.Tags=True
+REINST_FoodFightersChar_C_122.Activation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
@@ -1688,7 +1714,7 @@ RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00;
 RecentlyPlaced=/Game/Meshs/food/Pumpkin_Mat.Pumpkin_Mat;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1767,7 +1793,7 @@ LastLogListing=FBXImport
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
-StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
+StaticMeshActor=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1860,11 +1886,12 @@ FireAmmoPickup_C.Replication=True
 FireAmmoPickup_C.Actor=True
 IceAmmoPickup_C.Actor=True
 FoodFightersPlayerStart_C.Actor=True
+StaticMeshActor.Collision=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-ShapeComponent=
+ShapeComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
@@ -1878,7 +1905,7 @@ SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseA
 MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
 FireProjectile_C="Object.Actor.Tags" 
-IceProjectile_C=Object.Actor.Tags
+IceProjectile_C="Object.Actor.Tags" 
 MainMenu_C=
 UserWidget=
 Widget=
@@ -1898,15 +1925,15 @@ K2Node_Switch=
 K2Node=
 EdGraphNode=
 StaticMesh=
-StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" "Object.Actor.Tags" 
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" "Object.Actor.Tags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-StandardAmmoPickup_C=Object.Actor.Tags
+StandardAmmoPickup_C="Object.Actor.Tags" 
 StaticMeshComponent=
-CapsuleComponent=
-FireAmmoPickup_C=Object.Actor.Tags
-IceAmmoPickup_C=Object.Actor.Tags
+CapsuleComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+FireAmmoPickup_C="Object.Actor.Tags" 
+IceAmmoPickup_C="Object.Actor.Tags" 
 Font=Object.Font
 PauseMenu_C=
 EndGameScreen_C=
