changed base look rate down from 70 to 55

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1690,6 +1690,16 @@ REINST_FoodFightersChar_C_122.PlanarMovement=True
 REINST_FoodFightersChar_C_122.MovementComponent=True
 REINST_FoodFightersChar_C_122.Tags=True
 REINST_FoodFightersChar_C_122.Activation=True
+REINST_FoodFightersChar_C_231.Variable=True
+REINST_FoodFightersChar_C_231.TransformCommon=True
+REINST_FoodFightersChar_C_231.Sockets=True
+REINST_FoodFightersChar_C_231.Shape=True
+REINST_FoodFightersChar_C_231.Navigation=True
+REINST_FoodFightersChar_C_231.Rendering=True
+REINST_FoodFightersChar_C_231.Physics=True
+REINST_FoodFightersChar_C_231.Collision=True
+REINST_FoodFightersChar_C_231.Tags=True
+REINST_FoodFightersChar_C_231.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
@@ -1714,7 +1724,7 @@ RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00;
 RecentlyPlaced=/Game/Meshs/food/Pumpkin_Mat.Pumpkin_Mat;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1793,7 +1803,7 @@ LastLogListing=PIE
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
-StaticMeshActor=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
 
 [WidgetTemplatesExpanded]
 Extra=False
