added trigger box below level to destroy projectiles that fall out of the map early to improve performance since killz didnt seem to be working correctly

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,7 @@ OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
 OpenAssetsAtExit=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup
 OpenAssetsAtExit=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup
 OpenAssetsAtExit=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup
+OpenAssetsAtExit=/Game/Blueprints/TriggerBox_Blueprint.TriggerBox_Blueprint
 
 [RootWindow]
 ScreenPosition=X=220.000 Y=64.000
@@ -1700,8 +1701,51 @@ REINST_FoodFightersChar_C_231.Physics=True
 REINST_FoodFightersChar_C_231.Collision=True
 REINST_FoodFightersChar_C_231.Tags=True
 REINST_FoodFightersChar_C_231.Events=True
+StandardProjectile_C.TransformCommon=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Rendering=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+TriggerBox_Blueprint_C.TransformCommon=True
+TriggerBox_Blueprint_C.Shape=True
+TriggerBox_Blueprint_C.Navigation=True
+TriggerBox_Blueprint_C.Rendering=True
+TriggerBox_Blueprint_C.Physics=True
+TriggerBox_Blueprint_C.Collision=True
+TriggerBox_Blueprint_C.Tags=True
+TriggerBox_Blueprint_C.Input=True
+TriggerBox_Blueprint_C.Actor=True
+TriggerBox_Blueprint_C.Tick=True
+TriggerBox_Blueprint_C.Replication=True
+REINST_TriggerBox_Blueprint_C_308.TransformCommon=True
+REINST_TriggerBox_Blueprint_C_308.Shape=True
+REINST_TriggerBox_Blueprint_C_308.Navigation=True
+REINST_TriggerBox_Blueprint_C_308.Rendering=True
+REINST_TriggerBox_Blueprint_C_308.Physics=True
+REINST_TriggerBox_Blueprint_C_308.Collision=True
+REINST_TriggerBox_Blueprint_C_308.Tags=True
+REINST_TriggerBox_Blueprint_C_308.Input=True
+REINST_TriggerBox_Blueprint_C_308.Actor=True
+TriggerBox_Blueprint_C.Variable=True
+TriggerBox_Blueprint_C.Sockets=True
+TriggerBox_Blueprint_C.Events=True
+REINST_TriggerBox_Blueprint_C_318.TransformCommon=True
+REINST_TriggerBox_Blueprint_C_318.Shape=True
+REINST_TriggerBox_Blueprint_C_318.Navigation=True
+REINST_TriggerBox_Blueprint_C_318.Rendering=True
+REINST_TriggerBox_Blueprint_C_318.Physics=True
+REINST_TriggerBox_Blueprint_C_318.Collision=True
+REINST_TriggerBox_Blueprint_C_318.Tags=True
+REINST_TriggerBox_Blueprint_C_318.Input=True
+REINST_TriggerBox_Blueprint_C_318.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
@@ -1721,7 +1765,6 @@ RecentlyPlaced=/Game/Meshs/food/donut.donut;
 RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_Base_Color.Apple_Base_Color;
 RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat;
 RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00;
-RecentlyPlaced=/Game/Meshs/food/Pumpkin_Mat.Pumpkin_Mat;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1804,6 +1847,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+TriggerBox_Blueprint_C=
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1897,6 +1941,7 @@ FireAmmoPickup_C.Actor=True
 IceAmmoPickup_C.Actor=True
 FoodFightersPlayerStart_C.Actor=True
 StaticMeshActor.Collision=True
+TriggerBox.Collision=True
 
 [DetailPropertyExpansion]
 FoodProjectile_C=
@@ -1935,7 +1980,7 @@ K2Node_Switch=
 K2Node=
 EdGraphNode=
 StaticMesh=
-StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" "Object.Actor.Tags" 
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" "Object.Actor.Tags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
@@ -1950,6 +1995,11 @@ EndGameScreen_C=
 FoodFightersGM_C=
 GameMode=
 Blueprint_CeilingLight_C="Object.Light.Color" 
+TriggerBox="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
+TriggerBase="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
+TriggerBox_Blueprint_C="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
+REINST_TriggerBox_Blueprint_C_308="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
+REINST_TriggerBox_Blueprint_C_318="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
